# tcp-chat-encryption-cybersec

./: Cargo.toml  readme.md
src/: lib.rs  main_client.rs  protocol.rs
src/ciphers/: mod.rs
src/ciphers/cesar/: cipher.rs
src/ciphers/des/: cipher.rs  mod.rs
src/ciphers/monoalphabetic/: cipher.rs  mod.rs
src/ciphers/playfair/: cipher.rs  matrix.rs
src/ciphers/rc4/: cipher.rs
src/ciphers/rc4_bortoli/: cipher.rs
src/ciphers/vigenere/: cipher.rs  mod.rs
