[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
textwrap = "0.16"

[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "client"
path = "src/main_client.rs"